--- a/STM32H743I-EVAL_BSP/Layers/IoT/CubeMX/Board.cgen.yml
+++ b/STM32H743I-EVAL_BSP/Layers/IoT/CubeMX/Board.cgen.yml
@@ -1,5 +1,5 @@
 generator-import:
-  for-device: STMicroelectronics::STM32H743XIHx
+  for-device: STM32H743XIHx
   for-board: STM32H743I-EVAL
   define:
     - USE_HAL_DRIVER
@@ -62,3 +62,4 @@ generator-import:
         - file: ./STM32CubeMX/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd.c
         - file: ./STM32CubeMX/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_pcd_ex.c
         - file: ./STM32CubeMX/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_ll_usb.c
+        - file: ./STM32CubeMX/Drivers/STM32H7xx_HAL_Driver/Src/stm32h7xx_hal_hcd.c
