--- a/STM32H743I-EVAL_BSP/Layers/IoT/Board.clayer.yml
+++ b/STM32H743I-EVAL_BSP/Layers/IoT/Board.clayer.yml
@@ -13,7 +13,6 @@ layer:
     - connect: STM32H743I-EVAL Board
       provides:
         - CMSIS_ETH: 0
-        - CMSIS_MCI: 0
         - CMSIS_USB_Device: 0
         - CMSIS_VIO
         - STDIN
@@ -21,20 +20,25 @@ layer:
         - STDERR
         - Heap: 1024
 
+  define:
+    - CMSIS_target_header: \"STM32H743I-EVAL.h\"
+
+  add-path:
+    - ./
+
   packs:
     - pack: Keil::STM32H7xx_DFP@>=4.0.0-0
     - pack: Keil::STM32H743I-EVAL_BSP@>=1.0.0-0
     - pack: ARM::CMSIS@>=6.0.0
     - pack: ARM::CMSIS-Driver@>=2.8.0
     - pack: ARM::CMSIS-Compiler@>=2.0.0
+    - pack: ARM::CMSIS-Driver_STM32@>=1.0.0-0
 
   components:
     - component: Keil::Device:CubeMX
 
     - component: ARM::CMSIS:CORE
 
-    - component: Keil::CMSIS Driver:USART
-    - component: Keil::CMSIS Driver:MCI
     - component: Keil::CMSIS Driver:USB Device
     - component: Keil::CMSIS Driver:Ethernet MAC
     - component: Keil::CMSIS Driver:Ethernet PHY:LAN8742A
